# Equity-Ranker-1

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
attached_assets/: Pasted--writing-variant-chat-message-id-48266-Use-this-as-the-_1775950530700.txt  Pasted--writing-variant-chat-message-id-58314-Use-this-prompt-_1775957589829.txt  Pasted-Add-a-simple-market-cap-filter-to-the-Controls-panel-GO_1775574523831.txt  Pasted-Add-five-portfolio-weighting-methods-to-the-app-impleme_1775571657376.txt  Pasted-Add-sector-mapping-and-benchmark-assignment-to-support-_1775780618203.txt  Pasted-Build-a-minimal-mobile-first-equity-ranking-and-risk-ap_1775485063050.txt  Pasted-Do-a-read-only-audit-of-the-current-app-and-tell-me-exa_1775691617768.txt  Pasted-FULL-POWER-PERFORMANCE-PATCH-For-this-patch-optimize-fo_1775532983080.txt  Pasted-Focus-only-on-the-backend-data-layer-for-a-new-Quality-_1775827579636.txt  Pasted-Good-catch-Rename-and-remove-any-implication-of-hidden-_1775930265724.txt  Pasted-I-m-going-to-assume-corooefgiex-means-config-I-couldn-t_1775540128196.txt  Pasted-I-want-to-evaluate-our-current-portfolio-optimizer-agai_1775575132840.txt  Pasted-Implement-Phase-1-only-for-the-existing-profitability-O_1775857594825.txt  Pasted-Implement-a-Tags-system-that-is-completely-independent-_1775870037601.txt  Pasted-New-patch-expand-fundamentals-data-carefully-with-perfo_1775709481859.txt  Pasted-Next-patch-implement-progressive-Quality-Data-eligibili_1775710853261.txt  Pasted-PATCH-1-MOBILE-FIRST-RESPONSIVE-LAYOUT-Objective-Make-t_1775485863484.txt  (+25 more)
lib/api-spec/: openapi.yaml
(+33 files in other folders)
